// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dropdown.Item UU5.Bricks.Dropdown.Item - onClick() 1`] = `
<Dropdown
  colorSchema="pink"
  id="dropID"
  label="onClickEvent"
  size="l"
>
  <dropdown-item
    header={true}
    id="itemID"
    label="{user name}"
    onClick={[Function]}
  />
</Dropdown>
`;

exports[`UU5.Bricks.Dropdown.Item UU5.Bricks.Dropdown.Item - onClick() 2`] = `
<Dropdown
  colorSchema="pink"
  id="dropID"
  label="onClickEvent"
  size="l"
>
  <dropdown-item
    header={true}
    id="itemID"
    label="{user name}"
    onClick={[Function]}
  />
</Dropdown>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkGrammar=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkHighlight=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item checkSpaces=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item className="my-classname" 1`] = `
<li
  className="uu5-bricks-dropdown-item my-classname"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content="This is Content from ContentMixin" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item content=12345 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item controlled=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item default props 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item disabled=true 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-disabled disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    disabled={true}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item diviner=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item docKit examples UU5.Bricks.Dropdown.Item example make snapshot 1`] = `
<div
  className="color-schema-green uu5-bricks-dropdown uu5-bricks-dropdown-dropdown uu5-bricks-dropdown-dropdown"
  id="uuID"
  onMouseLeave={null}
  onMouseOver={null}
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-dropdown-button-cover"
    id="uuID-cover"
  >
    <Button
      className="uu5-bricks-dropdown-button"
      colorSchema="green"
      content={
        Array [
          "User account",
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-eye"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />,
        ]
      }
      onClick={[Function]}
      size="l"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Dropdown.Item dropup=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dropup=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item dynamic=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item header=true 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-bricks-dropdown-item-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Span />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item hidden=true 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href="#elementID" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    href="#elementID"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item href="https://www.plus4u.net/" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    href="https://www.plus4u.net/"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item id="myId" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="myId"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item ignoreHTML=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item label="Label items" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    content="Label items"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item mainAttrs=undefined 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item name="myName" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  name="myName"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="bigBox" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="bigBoxCollection" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="box" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="boxCollection" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="container" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="inline" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="page" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="smallBox" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="smallBoxCollection" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item nestingLevel="spa" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item noIndex=true 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-noindex"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item offset=70 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={70}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item pureRender=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item selected=true 1`] = `
<li
  className="uu5-bricks-dropdown-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item smoothScroll=3000 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
    smoothScroll={3000}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style="padding:8px; borderRadius: 2px" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target="_blank" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
    target="_blank"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target="_parent" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
    target="_parent"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target="_self" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item target="_top" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
    target="_top"
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector=false 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item textCorrector=true 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;

exports[`UU5.Bricks.Dropdown.Item tooltip="My Tooltip" 1`] = `
<li
  className="uu5-bricks-dropdown-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <Link
    className="uu5-bricks-dropdown-item-link"
    colorSchema="custom"
    offset={null}
  />
</li>
`;
